fix config, fix bunch o bugs, multi-role example complete